--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -3,7 +3,7 @@
     <%= page_header do %>
       <h1>
         <%= avatar_profile_link @status.user %>
-        <%= @status.user.full_name %>
+        <%= @status.user.email %>
         <small><%= time_ago_in_words(@status.created_at) + " ago" %></small>
       </h1>
     <% end %>
